PYIC-3997 Refactor userIdentityServie moved VC operation method get, delete to verifiable-credentials service, updated tests.